Fixes vertical alignmen of center sprite

--- a/javascript/examples/grapheditor/www/styles/grapheditor.css
+++ b/javascript/examples/grapheditor/www/styles/grapheditor.css
@@ -413,7 +413,7 @@
 .geSprite-actualsize { background-position: 0 0; }
 .geSprite-bold { background-position: 0 -46px; }
 .geSprite-bottom { background-position: 0 -92px; }
-.geSprite-center { background-position: 0 -138px; }
+.geSprite-center { background-position: 0 -139px; }
 .geSprite-delete { background-position: 0 -184px; }
 .geSprite-fillcolor { background-position: 0 -230px; }
 .geSprite-fit { background-position: 0 -277px; }
